k8s/pre-prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-app-service
  namespace: chat-pre-prod
  labels:
    app: chat-app
    env: pre-prod
spec:
  type: ClusterIP
  selector:
    app: chat-app
    env: pre-prod
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
